--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>MediaSoup demo app</title>
-    <script type="text/javascript" src="http://localhost:8080/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="https://bikash-phukan.codes:8080/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/mediasoup-client.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
 
 <body>
-<h1>MediaSoup small demo app.</h1>
+<h1>Online Seminary</h1>
 <div id="container"></div>
 </body>
 
